# --------------------------------------------------------------
#  yaml
#
#  provides:
#    yaml.lua
#    yaml/vendor.so
# --------------------------------------------------------------
set(MODULE_NAME yaml)
set(target ${MODULE_NAME})

# --------------------------------------------------------------
#  module
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  vendor
# --------------------------------------------------------------
add_subdirectory(vendor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lubyk
  DESTINATION lib
)                                  

